VOICE TO TEXT BABY!

--- a/useful.ipynb
+++ b/useful.ipynb
@@ -8,11 +8,13 @@
     "\n",
     "### Installation\n",
     "________________________\n",
-    "#### Quick installation (does everything below)\n",
+    "#### Quick installation (does everything below, currently just redis)\n",
     "```bash\n",
     "# replace with new gist \n",
     "curl -fsSL https://gist.github.com/fire17/1b2b3b4b5c6c7d8d9e0a3c4d5e5d6e7f/raw | bash\n",
     "```\n",
+    "\n",
+    "\n",
     "\n",
     "## or\n",
     "________________________\n",
@@ -28,7 +30,17 @@
     "```bash\n",
     "python3 -m pip install xo.redis --upgrade\n",
     "```\n",
-    "________________________\n"
+    "________________________________________________\n",
+    "#### install wisper! sweet\n",
+    "```bash\n",
+    "python3 -m pip install git+https://github.com/openai/whisper.git\n",
+    "```\n",
+    "________________________________________________\n",
+    "#### install other deps (for audio and other tools)\n",
+    "```bash\n",
+    "python3 -m pip install -r requirements.txt\n",
+    "```\n",
+    "________________________"
    ]
   },
   {
