--- a/useful.ipynb
+++ b/useful.ipynb
@@ -51,7 +51,7 @@
     "______________________________________\n",
     "run openwa with npx\n",
     "```bash\n",
-    "npx @open-wa/wa-automate --socket -p 8085 -k \"$WA_KEY\"\n",
+    "npx @open-wa/wa-automate --socket -p 8085 -k \"$WA_KEY\" --license-key \"$WA_KEY\" --message-preprocessor 'AUTO_DECRYPT_SAVE'\n",
     "```\n",
     "______________________________________\n"
    ]
