loading services soon ....

--- a/useful.ipynb
+++ b/useful.ipynb
@@ -93,12 +93,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.7.9 (tags/v3.7.9:13c94747c7, Aug 17 2020, 16:30:00) [MSC v.1900 64 bit (AMD64)]"
+   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f5d21c40b5f957f6b942bea36630e4f56b8319e5bb421b5daef15cce5c7762df"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
